# test2

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/: pull_request_template.md
.github/workflows/: build.yml
config/: sdkconfig.defaults
docs/: README.md  acceptance-tests.md  ble-sound-meter-protocol.md  change-checklist.md  implementation_inventory.md  rule-automation-firmware-plan.md  rule-automation-smoke-checklist.md  status_ui_input_review.md  transport-feasibility.md  web_ui_redesign_status.md  web_ui_resource_budget.md
docs/hardware/: sticks3.board.json  sticks3.md
docs/hardware/sticks3/: sticks3.board.json  sticks3.md  sticks3_battery.md  sticks3_button.md  sticks3_display.md  sticks3_imu.md  sticks3_ir_nec.md  sticks3_m5pm1.md  sticks3_mic.md  sticks3_others.md  sticks3_speaker.md  sticks3_wakeup.md
main/: CMakeLists.txt  Kconfig.projbuild  action_dispatcher.c  action_dispatcher.h  action_ir.c  action_ir.h  action_speaker.h  app_mode.c  app_mode.h  app_time.c  app_time.h  app_wifi.c  app_wifi.h  audio_metrics.c  audio_metrics.h  audio_pipeline.c  audio_pipeline.h  audio_resample.c  audio_resample.h  ble_sound_level_protocol.h  bmi270.c  bmi270.h  board_adc.c  board_adc.h  board_audio.c  board_audio.h  board_audio_clock.c  board_audio_clock.h  board_audio_power.c  board_audio_power.h  board_i2c.c  board_i2s.c  board_i2s.h  board_power.c  board_power.h  board_sticks3.h  button_state.h  capability_registry.c  capability_registry.h  display_text.h  (+39 more)
src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
src/actions/: action_dispatcher.c  action_hat.c  action_hat.h  action_http.c  action_http.h  action_speaker.c
src/app/: app_mode.h  app_sound_level_demand.c  app_sound_level_demand.h  app_wifi.c  button_state.c  main.c
src/audio/: audio_metrics.c  audio_resample.h  board_audio.c  board_audio.h  board_audio_clock.h  board_audio_power.c  board_i2s.c  board_i2s.h  es8311.c  es8311.h
src/board/: board_i2c.h  board_power.c  board_power.h  hardware_fact_service.c  hardware_fact_service.h  m5pm1.c  m5pm1.h  register_bus.c
src/rules/: capability_registry.c  capability_registry.h  rule_engine.c  rule_runtime.c  rule_runtime.h  rule_web.c  rule_web.h
src/transport/: ble_rule_protocol.h  transport_ble_gatt.c
src/triggers/: trigger_gpio.c  trigger_gpio.h  trigger_sources.c  trigger_sources.h
src/ui/: display_text.c  status_lcd.c  status_lcd.h  status_ui.c  status_ui.h  status_ui_input_map.c  status_ui_input_map.h  ui_keyboard.c  ui_keyboard.h  ui_model.h  ui_nav.c  ui_nav.h  ui_render.c  ui_render.h
src/usb_audio/: uac_audio_buffer.c  uac_audio_buffer.h  uac_config.c  uac_config.h  uac_device_adapter.c  uac_device_adapter.h  uac_esp_device.c  uac_esp_device.h  uac_mic_source.c  uac_mic_source.h  uac_service.c  uac_service.h  uac_speaker_sink.c  uac_speaker_sink.h
tests/host/: run_host_tests.sh  test_action_dispatcher.c  test_action_modules.c  test_app_mode.c  test_app_sound_level_demand.c  test_audio_metrics.c  test_audio_pipeline.c  test_audio_resample.c  test_ble_rule_protocol.c  test_ble_sound_protocol.c  test_bmi270_motion.c  test_board_adc.c  test_board_audio.c  test_board_audio_clock.c  test_board_audio_power.c  test_board_i2s_decode.c  test_board_power.c  test_button_state.c  test_capability_hardware.c  test_capability_sound_disabled.c  test_capability_sound_enabled.c  test_display_text.c  test_es8311_sequence.c  test_external_triggers_and_web.c  test_hardware_fact_service.c  test_m5pm1_gpio.c  test_m5pm1_power.c  test_pcm_debug_ring.c  test_rule_config_store.c  test_rule_engine.c  test_rule_runtime.c  test_rule_types.c  test_sound_level_service.c  test_status_ui_input_map.c  test_trigger_sources.c  test_uac_audio_buffer.c  test_uac_config.c  test_uac_device_adapter.c  test_uac_service.c  test_uac_sources.c  (+2 more)
tests/host/fakes/: fake_board_deps.c  fake_register_bus.c  fake_register_bus.h  fake_uac_board_deps.c
tests/host/fakes/esp_compat/: esp_err.h  esp_log.h  sdkconfig.h
tests/host/fakes/esp_compat/driver/: gpio.h  i2c.h  i2c_master.h  i2s.h  i2s_std.h  i2s_types.h
tests/host/fakes/esp_compat/freertos/: FreeRTOS.h  semphr.h  task.h
tests/host/fakes/esp_idf_stubs/: sdkconfig.h
tests/host/fakes/esp_idf_stubs/driver/: gpio.h
tests/host/fakes/esp_idf_stubs/esp_adc/: adc_cali.h  adc_cali_scheme.h  adc_oneshot.h
tests/tools/: test_check_uac_source_inventory.py  test_make_factory_image.py  test_status_ui_keyboard.py
tools/: check_audio_clock.py  check_audio_safety.py  check_board_map.py  check_docs_consistency.py  check_naming_consistency.py  check_partition_table.py  check_source_inventory.py  check_transport_config.py  check_uac_source_inventory.py  check_web_ui_budget.py  make_factory_image.py
webui/: app.js  build_webui.py  index.html  styles.css
